Add server structure
